my-app/deploy/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: staging
spec:
  ingressClassName: external-ingress-nginx
  rules:
    - host: api.devopsbyexample.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 8080
